Test conflicts among imports.